# Machine-Learning-Projects

./: README.md
BankNote Authentication Prediction API/: Banknote.pkl  README.md  app.py  main.py  model_training.ipynb  pyproject.toml  requirements.txt  schemas.py
